Updates to Header and Portfolio Page

--- a/blog.html
+++ b/blog.html
@@ -10,13 +10,13 @@
 
 
 <!-- Document Title -->
-    <title>Blog | Ashley Nicole Photography</title>
+<title>Blog | Ashley Nicole Photography</title>
 
 <!-- Short description of the page (limit to 150 characters) -->
 <!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
 <meta name="description" content="">
 
-<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 <!-- External CSS -->
@@ -85,7 +85,7 @@
 	<div class="site-content-contain">
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area">
-				<main id="main" class="site-main" role="main">
+				<main id="main" class="site-main container" role="main">
                     
                     <div class="container">
                         <h1 class="page-title">The Blog</h1>
