--- a/footer.html
+++ b/footer.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 
-<html lang="en-CA">
- 
-<head>
+<html lang="en" class="no-js no-svg">
 
-    <meta charset="UTF-8" />
-    <title>Footer | Ashley Nicole Photography</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	
-<link rel='stylesheet' id='style-css'  href='css/normalize.css' type='text/css' media='all' />
-<link rel='stylesheet' id='style-css'  href='css/grid.css' type='text/css' media='all' />
-<link rel='stylesheet' id='style-css'  href='css/style.css' type='text/css' media='all' />
-<link rel='stylesheet' id='font-awesome-css'  href='css/font-awesome.min.css' type='text/css' media='all' />
+<head>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+
+<!-- Document Title -->
+<title>Ashley Nicole Photography</title>
+
+<!-- Short description of the page (limit to 150 characters) -->
+<!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
+<meta name="description" content="">
+
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+<!-- External CSS -->
+<!-- FontAwesome Stylesheet -->
+<link rel='stylesheet' id='fontawesome-css'  href='css/font-awesome.min.css' type='text/css' media='all' />
+<!-- Normalize Stylesheet -->
+<link rel='stylesheet' id='normalize-css'  href='css/normalize.css' type='text/css' media='all' />
+<!-- ANP Stylesheets -->
+<link rel='stylesheet' id='style-anp-grid-css'  href='css/style-anp-grid.css' type='text/css' media='all' />
+<link rel='stylesheet' id='style-anp-basic-css'  href='css/style-anp-basic.css' type='text/css' media='all' />
+<link rel='stylesheet' id='style-anp-theme-css'  href='css/style-anp-theme.css' type='text/css' media='all' />
+<link rel='stylesheet' id='style-anp-responsive-css'  href='css/style-anp-responsive.css' type='text/css' media='all' />
+
+
+<!-- icons -->
+<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+<!-- Place favicon.ico in the root directory as fallback -->
+
+<script src="js/jquery-1.12.0.min.js"></script>
+<script src="js/modernizr-2.8.3.min.js"></script>
 
 </head>
-
+<!-- End of Head -->
 <!-- End of Header -->
 <body class="blog">
 	<div id="page" class="site">
@@ -24,7 +48,7 @@
 		<div class="site-content-contain">
 			<div id="content" class="site-content">
 				<div id="primary" class="content-area">
-					<main id="main" class="site-main" role="main">
+					<main id="main" class="site-main container" role="main">
 
 					</main><!-- #main -->
 				</div><!-- #primary -->
