--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
 <!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
 <meta name="description" content="">
 
-<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 <!-- External CSS -->
