--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
 <!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
 <meta name="description" content="">
 
-<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 <!-- External CSS -->
@@ -40,7 +40,6 @@
 
 </head>
 <!-- End of Head -->
-
 
 
 <body class="page">
@@ -85,9 +84,7 @@
 	<div class="site-content-contain">
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area">
-				<main id="main" class="site-main" role="main">
-
-<div class="container">
+				<main id="main" class="site-main container" role="main">
 
 
 <header class="page-header">
@@ -235,9 +232,7 @@
 		<p>** All pricing subject to 8% PST</p>
 								
 	</section><!-- .row -->							
-</div><!-- .container -->
 
-					
 				</main><!-- #main -->
 			</div><!-- #primary -->
 		</div><!-- #content -->
