--- a/blog.html
+++ b/blog.html
@@ -84,8 +84,8 @@
 
 	<div class="site-content-contain">
 		<div id="content" class="site-content">
-			<div id="primary" class="content-area">
-				<main id="main" class="site-main container" role="main">
+			<div id="primary" class="content-area container">
+				<main id="main" class="site-main" role="main">
                     
                     <div class="container">
                         <h1 class="page-title">The Blog</h1>
@@ -142,8 +142,8 @@
 				</main><!-- #main -->
 			</div><!-- #primary -->
 			
-			<aside id="secondary" class="widget-area" role="complementary">
-
+			<aside id="secondary" class="widget-area container" role="complementary">
+				<div class="container">
 				<div id="search-2" class="widget widget_search">
 					<form role="search" method="get" class="search-form" action="#">
 						<label for="search-form-1">
@@ -202,7 +202,7 @@
 					</ul>
 				</div>
 			</aside><!-- #secondary -->
-
+			</div><!-- .container -->
 		</div><!-- #content -->
 
 		<!-- in twentyseventeen, they use 1.widgets 2.social icons 3. site info -->
