--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
 	<div class="site-content-contain">
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area">
-				<main id="main" class="site-main container" role="main">
+				<main id="main" class="site-main" role="main">
 
                     
                     
